<resources>
    <string name="app_name">Hare Krishna Mantra Practice</string>
    <string name="action_settings">Output Language</string>
    <string name="action_clear">Clear Counters</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Correct Mantras: </string>
    <string name="second_fragment_label">Mantra Chanting</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="action_about">About</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="first_fragment_0">Hare</string>
    <string name="first_fragment_1">Krsna</string>
    <string name="first_fragment_2">Hare</string>
    <string name="first_fragment_3">Krsna</string>
    <string name="first_fragment_4">Krsna</string>
    <string name="first_fragment_5">Krsna</string>
    <string name="first_fragment_6">Hare</string>
    <string name="first_fragment_7">Hare</string>
    <string name="first_fragment_8">Hare</string>
    <string name="first_fragment_9">Rama</string>
    <string name="first_fragment_10">Hare</string>
    <string name="first_fragment_11">Rama</string>
    <string name="first_fragment_12">Rama</string>
    <string name="first_fragment_13">Rama</string>
    <string name="first_fragment_14">Hare</string>
    <string name="first_fragment_15">Hare</string>
    <string name="title_drawer">Chanting the holy names of the Mahamantra,</string>
    <string name="title_drawer_2">Hare Krishna, Hare Krishna, Krishna Krishna, Hare Hare, Hare Rama, Hare Rama, Rama Rama, Hare Hare,</string>
    <string name="title_drawer_3">"is a profound and transformative spiritual practice rooted in the ancient tradition of Bhakti Yoga. This mantra, composed of sacred names of the Supreme Divine, is chanted to evoke a deep connection with God, purify the mind, and awaken one's spiritual consciousness. By repeating these names with sincerity and devotion, one can experience inner peace, joy, and a sense of unity with the divine. This practice is accessible to everyone, regardless of background or prior knowledge, and can be performed anywhere, making it a powerful tool for personal and spiritual growth."</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tortoise_icon">Tortoise icon representing slower speed</string>
    <string name="hare_icon">Hare icon representing faster speed</string>
    <string name="language_changed_to_english">Language changed to English</string>
    <string name="language_changed_to_sanskrit">Language changed to Sanskrit</string>
</resources>